Video4 e 5 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -30,30 +30,42 @@
                     <p>As belezas da Irlanda</p>
                 </div>
             </a>
+
             <a href="video2.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4"></video>
                     <p>Hemácias do sangue</p>
                 </div>
             </a>
+
             <a href="video3.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4"></video>
                     <p>Tinta</p>
                 </div>
             </a>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4"></video>
-                <p>TITULO</p>
-            </div>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/5.mp4"></video>
-                <p>TITULO</p>
-            </div>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4"></video>
-                <p>TITULO</p>
-            </div>
+
+            <a href="video4.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4"></video>
+                    <p>Praia</p>
+                </div>
+            </a>
+
+            <a href="video5.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/5.mp4"></video>
+                    <p>Neblina</p>
+                </div>
+            </a>
+
+            <a href="video6.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4"></video>
+                    <p>TITULO</p>
+                </div>
+            </a>
+
             <div class="card-video">
                 <video src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4"></video>
                 <p>TITULO</p>
