Video6 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -62,7 +62,7 @@
             <a href="video6.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4"></video>
-                    <p>TITULO</p>
+                    <p>Coelho</p>
                 </div>
             </a>
 
