Video7 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -66,10 +66,12 @@
                 </div>
             </a>
 
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4"></video>
-                <p>TITULO</p>
-            </div>
+            <a href="video7.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4"></video>
+                    <p>Galáxia</p>
+                </div>
+            </a>
             <div class="card-video">
                 <video src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4"></video>
                 <p>TITULO</p>
