Video8 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -72,10 +72,14 @@
                     <p>Galáxia</p>
                 </div>
             </a>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4"></video>
-                <p>TITULO</p>
-            </div>
+
+            <a href="video8.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4"></video>
+                    <p>Foguete decolando</p>
+                </div>
+            </a>
+
             <div class="card-video">
                 <video src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4"></video>
                 <p>TITULO</p>
