Video10 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <p>LabeTube</p>
+        <p>Labe <span>Tube</span></p>
         <form action="">
             <input type="search" name="pesquisa" id="pesquisa">
             <button>
@@ -86,10 +86,13 @@
                     <p>Estrada em montanha</p>
                 </div>
             </a>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4"></video>
-                <p>TITULO</p>
-            </div>
+
+            <a href="video10.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4"></video>
+                    <p>Cachoeira</p>
+                </div>
+            </a>
         </section>
     </main>
     <footer>
