--- a/semana2/aula8/video3.html
+++ b/semana2/aula8/video3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <p>LabeTube</p>
+        <p>Labe <span>Tube</span></p>
         <form action="">
             <input type="search" name="pesquisa" id="pesquisa">
             <img src="./imagens/lupa.png" alt="icone de lupa">
