--- a/semana2/aula8/video7.html
+++ b/semana2/aula8/video7.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <p>LabeTube</p>
+        <p>Labe <span>Tube</span></p>
         <form action="">
             <input type="search" name="pesquisa" id="pesquisa">
             <img src="./imagens/lupa.png" alt="icone de lupa">
