--- a/semana2/aula8/video11.html
+++ b/semana2/aula8/video11.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coelho</title>
+    <title>Fogos de artifício</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -23,8 +23,8 @@
 
     <main class="main-video">
         <div>
-            <h1>Coelho</h1>
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4" controls autoplay></video>
+            <h1>Fogos de artifício</h1>
+            <video src="https://storage.googleapis.com/future-apis.appspot.com/11.mp4" controls autoplay></video>
         </div>
         <a href="./index.html">
             <button id="botao">Voltar</button>
