--- a/semana2/aula8/video4.html
+++ b/semana2/aula8/video4.html
@@ -22,7 +22,7 @@
     <main class="main-video">
         <div>
             <h1>Praia</h1>
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4" controls></video>
+            <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4" controls autoplay></video>
         </div>
         <a href="./index.html">
             <button id="botao">Voltar</button>
