--- a/semana2/aula8/video7.html
+++ b/semana2/aula8/video7.html
@@ -24,7 +24,7 @@
     <main class="main-video">
         <div>
             <h1>Galáxia</h1>
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4" controls></video>
+            <video src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4" controls autoplay></video>
         </div>
         <a href="./index.html">
             <button id="botao">Voltar</button>
