--- a/semana2/aula8/video9.html
+++ b/semana2/aula8/video9.html
@@ -24,7 +24,7 @@
     <main class="main-video">
         <div>
             <h1>Estrada em montanha</h1>
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4" controls></video>
+            <video src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4" controls autoplay></video>
         </div>
         <a href="./index.html">
             <button id="botao">Voltar</button>
