Video12 e 13 totalmente prontos

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -104,14 +104,14 @@
             <a href="video12.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/12.mp4"></video>
-                    <p>Cachoeira</p>
+                    <p>Mulher em campo de flores</p>
                 </div>
             </a>
 
             <a href="video13.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/13.mp4"></video>
-                    <p>Cachoeira</p>
+                    <p>Criação de layout</p>
                 </div>
             </a>
 
