Video14 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -117,22 +117,8 @@
 
             <a href="video14.html">
                 <div class="card-video">
-                    <video src="https://storage.googleapis.com/future-apis.appspot.com/14.mp4"></video>
-                    <p>Cachoeira</p>
-                </div>
-            </a>
-
-            <a href="video15.html">
-                <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/15.mp4"></video>
-                    <p>Cachoeira</p>
-                </div>
-            </a>
-
-            <a href="video16.html">
-                <div class="card-video">
-                    <video src="https://storage.googleapis.com/future-apis.appspot.com/16.mp4"></video>
-                    <p>Cachoeira</p>
+                    <p>Fogueira</p>
                 </div>
             </a>
         </section>
