--- a/semana2/aula9/index.html
+++ b/semana2/aula9/index.html
@@ -33,18 +33,20 @@
         </div>
     </nav>
 
-    <header>
-
-    </header>
+    <header></header>
 
     <main>
         <section>
-            <div class="azul">1</div>
-            <div class="amarelo">2</div>
-            <div class="verde">3</div>
-            <div class="azul">4</div>
-            <div class="amarelo">5</div>
-            <div class="verde">6</div>
+            <div class="primeiro-bloco">
+                <div class="azul">1</div>
+                <div class="amarelo">2</div>
+                <div class="verde">3</div>
+            </div>
+            <div class="primeiro-bloco">
+                <div class="azul">4</div>
+                <div class="amarelo">5</div>
+                <div class="verde">6</div>
+            </div>
         </section>
         <section>
             <div class="preto">7</div>
