--- a/semana4/aula15/planner/index.html
+++ b/semana4/aula15/planner/index.html
@@ -56,11 +56,11 @@
                         <option value="24">24h</option>
                     </select>
                 </div>
-                <div class="container-btn">
-                    <button onclick="adicionarTarefa()" class="btn">Criar tarefa</button>
-                    <button onclick="limparLista()" class="btn" id="btn-limpar-lista">Limpar lista</button>
-                </div>
             </form>
+            <div class="container-btn">
+                <button onclick="adicionarTarefa()" class="btn">Criar tarefa</button>
+                <button onclick="limparLista()" class="btn" id="btn-limpar-lista">Limpar lista</button>
+            </div>
 
 
 
@@ -97,7 +97,7 @@
                 <div id="sexta" class="div-itens"></div>
             </div>
 
-            <div class="semana">
+            <div class="semana" id="div-sabado">
                 <h3>Sábado</h3>
                 <div id="sabado" class="div-itens"></div>
             </div>
